syntax = "proto3";

package preconfirmation.v1;

message Bid {
  string tx_hash = 1;
  string bid_amount = 2;
  string block_number = 3;
  bytes digest = 4;
  bytes signature = 5;
};

message PreConfirmation {
  Bid bid = 1;
  bytes digest = 2;
  bytes signature = 3;
  bytes provider_address = 4;
};
